<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/classroomTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/classroom_information"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/type_in_classroom_name_here"
            android:inputType="text" tools:targetApi="o" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/startDateTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/start_date"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerStartMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />

            <Spinner
                android:id="@+id/spinnerStartDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />

            <Spinner
                android:id="@+id/spinnerStartYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/endDateTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/end_date"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="247dp" />

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerEndMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />

            <Spinner
                android:id="@+id/spinnerEndDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />

            <Spinner
                android:id="@+id/spinnerEndYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible"
            tools:layout_editor_absoluteY="227dp" />

        <TextView
            android:id="@+id/studentRosterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/student_roster"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_weight="0"
                android:text="@string/last_name"
                android:textSize="18sp"
                android:layout_marginStart="150dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>